--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -2,11 +2,13 @@ version: "3.9"
 
 services:
   app:
+    container_name: api-server
     build:
       context: .
     restart: always
     volumes:
-      - static-data:/vol/web
+      - static-data:/vol/web/static
+      - media-data:/vol/web/media
     environment:
       - DB_HOST=db
       - DB_NAME=${DB_NAME}
@@ -18,6 +20,7 @@ services:
       - db
 
   db:
+    container_name : api-db
     image: postgres:13-alpine
     restart: always
     volumes:
@@ -28,6 +31,7 @@ services:
       - POSTGRES_PASSWORD=${DB_PASS}
 
   proxy:
+    container_name: api-proxy
     build:
       context: ./proxy
     restart: always
@@ -37,7 +41,9 @@ services:
       - 80:8000
     volumes:
       - static-data:/vol/static
+      - media-data:/vol/media
 
 volumes:
   postgres-data:
   static-data:
+  media-data:
