--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,4 +52,4 @@ jobs:
           cd infra/
           docker compose run --rm terraform -chdir=deploy/ init
           docker compose run --rm terraform -chdir=deploy/ workspace select -or-create $workspace
-          docker compose run --rm terraform -chdir=deploy/ apply -auto-approv
+          docker compose run --rm terraform -chdir=deploy/ apply -auto-approve
